# MLM_Player

./: .gitignore  CMakeLists.txt  LICENSE  README.md  icons.qrc  qml.qrc
Documentation/: ModernMusicPlayer_Handbook_Book.html
Documentation/documentation_md/: 01_introduction.md  02_build_system.md  09_main_bridge.md  11_qml_main_window.md  14_dataflow.md  15_building_and_packaging.md  16_launch_modes_and_ipc.md  17_minimal_view.md  18_os_integration.md
include/: audio_engine.h  cover_art_provider.h  equalizer.h  gamepad_controller.h  library_scanner.h  mpris_manager.h  playlist_manager.h  track.h  track_model.h
qml/: AppPopups.qml  EqualizerView.qml  GamepadControl.qml  LibraryView.qml  MinimalView.qml  NowPlayingView.qml  PlaylistDetailsView.qml  PlaylistPopup.qml  PlaylistsView.qml  main.qml
src/: audio_engine.cpp  cover_art_provider.cpp  equalizer.cpp  gamepad_controller.cpp  library_scanner.cpp  main.cpp  mpris_manager.cpp  playlist_manager.cpp  track_model.cpp
